SCB-1668 Replace sun.misc.BASE64* with java.util.Base64